--- a/public/css/styleKontakt.css
+++ b/public/css/styleKontakt.css
@@ -70,9 +70,11 @@ body {
 
 #InfoDiv{
     background-color: rgb(20, 20, 20);
-    padding: 0px 100px;
+    padding: 0px 0;
+    width: 100%;
+    max-width: 400px;
     border: 4px solid rgb(204, 180, 100);
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .InfoA {
